# hoshika

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  TASKS-phase01.md  TASKS-phase02.md  TASKS-phase03.md  TASKS-phase04.md  TASKS-phase05.md  TASKS.md  db-design.md  diff.txt  domain-model.md  fly.toml  hoshika-roadmap.md
.devcontainer/: .env.example  devcontainer-lock.json  devcontainer.json  docker-compose.override.yml.example  docker-compose.yml
.github/workflows/: ai-review.yml  auto-pr.yml  fly-deploy.yml  frontend.yml  rust.yml
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: db.ts  global-teardown.ts  wish-item-flow.spec.ts
frontend/src/: App.css  App.tsx  main.tsx  sentry.ts
frontend/src/api/: auth.ts  budgets.ts  categories.ts  client.test.ts  client.ts  types.ts  wishItems.ts
frontend/src/components/: AddWishItemForm.css  AddWishItemForm.tsx  BudgetMeter.css  BudgetMeter.test.tsx  BudgetMeter.tsx  CategoryFilter.css  CategoryFilter.tsx  ErrorFallback.css  ErrorFallback.tsx  SetBudgetForm.css  SetBudgetForm.test.tsx  (+7 more)
migrations/: 20260615000001_initial_schema.sql  20260717000001_add_user_scoping.sql  20260719000001_optimize_indexes.sql
scripts/: ai_review.py  auto_pr.py  check-layer-deps.sh  ci-e2e.sh  ci-frontend.sh  ci-rust.sh  dev-setup.sh  seed-dev-data.sh
src/: main.rs
src/application/: mod.rs
src/domain/: mod.rs
src/infrastructure/: mod.rs
src/presentation/: auth_middleware.rs  mod.rs  router.rs  state.rs
(+57 files in other folders)
